vypa_compiler/generated/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LBRACKET
    RBRACKET

Grammar

Rule 0     S' -> start
Rule 1     start -> program
Rule 2     program -> func_def program
Rule 3     program -> class_def program
Rule 4     program -> empty
Rule 5     empty -> <empty>
Rule 6     func_def -> func_header func_body
Rule 7     func_header -> var_type ID LPAREN param_list RPAREN
Rule 8     func_body -> LBRACE statement RBRACE
Rule 9     param_list -> VOID
Rule 10    param_list -> func_param
Rule 11    func_param -> func_param_def next_param
Rule 12    func_param_def -> var_type ID
Rule 13    next_param -> COMMA func_param
Rule 14    next_param -> empty
Rule 15    class_def -> CLASS ID COLON ID class_body
Rule 16    class_body -> LBRACE class_member_list RBRACE
Rule 17    class_member_list -> class_member
Rule 18    class_member_list -> empty
Rule 19    class_member -> class_member_def class_next_member
Rule 20    class_member_def -> var_def
Rule 21    class_member_def -> func_def
Rule 22    class_next_member -> class_member
Rule 23    class_next_member -> empty
Rule 24    var_type -> INT
Rule 25    var_type -> STRING
Rule 26    var_type -> VOID
Rule 27    var_type -> ID
Rule 28    statement -> var_def statement
Rule 29    statement -> var_assignment statement
Rule 30    statement -> expr SEMI statement
Rule 31    statement -> RETURN expr SEMI statement
Rule 32    statement -> WHILE LPAREN expr RPAREN LBRACE statement RBRACE statement
Rule 33    statement -> IF LPAREN expr RPAREN LBRACE statement RBRACE ELSE LBRACE statement RBRACE statement
Rule 34    statement -> THIS PERIOD ID EQUALS expr SEMI statement
Rule 35    statement -> ID PERIOD ID EQUALS expr SEMI statement
Rule 36    statement -> empty
Rule 37    var_assignment -> ID EQUALS expr SEMI
Rule 38    var_def -> var_type ID multiple_var_def
Rule 39    multiple_var_def -> SEMI
Rule 40    multiple_var_def -> COMMA ID multiple_var_def
Rule 41    expr -> LPAREN expr RPAREN
Rule 42    expr -> ID
Rule 43    expr -> INT_CONST
Rule 44    expr -> STRING_CONST
Rule 45    expr -> MINUS expr
Rule 46    expr -> expr PLUS expr
Rule 47    expr -> expr MINUS expr
Rule 48    expr -> expr TIMES expr
Rule 49    expr -> expr DIVIDE expr
Rule 50    expr -> LNOT expr
Rule 51    expr -> expr LOR expr
Rule 52    expr -> expr LAND expr
Rule 53    expr -> expr LT expr
Rule 54    expr -> expr LE expr
Rule 55    expr -> expr GE expr
Rule 56    expr -> expr GT expr
Rule 57    expr -> expr EQ expr
Rule 58    expr -> expr NE expr
Rule 59    expr -> LPAREN INT RPAREN expr
Rule 60    expr -> LPAREN STRING RPAREN expr
Rule 61    expr -> NEW ID
Rule 62    expr -> ID PERIOD expr
Rule 63    expr -> THIS PERIOD expr
Rule 64    expr -> SUPER PERIOD expr
Rule 65    expr -> ID LPAREN expr_list RPAREN
Rule 66    expr -> ID LPAREN RPAREN
Rule 67    expr_list -> expr next_expr
Rule 68    next_expr -> COMMA expr_list
Rule 69    next_expr -> empty

Terminals, with rules where they appear

CLASS                : 15
COLON                : 15
COMMA                : 13 40 68
DIVIDE               : 49
ELSE                 : 33
EQ                   : 57
EQUALS               : 34 35 37
GE                   : 55
GT                   : 56
ID                   : 7 12 15 15 27 34 35 35 37 38 40 42 61 62 65 66
IF                   : 33
INT                  : 24 59
INT_CONST            : 43
LAND                 : 52
LBRACE               : 8 16 32 33 33
LBRACKET             : 
LE                   : 54
LNOT                 : 50
LOR                  : 51
LPAREN               : 7 32 33 41 59 60 65 66
LT                   : 53
MINUS                : 45 47
NE                   : 58
NEW                  : 61
PERIOD               : 34 35 62 63 64
PLUS                 : 46
RBRACE               : 8 16 32 33 33
RBRACKET             : 
RETURN               : 31
RPAREN               : 7 32 33 41 59 60 65 66
SEMI                 : 30 31 34 35 37 39
STRING               : 25 60
STRING_CONST         : 44
SUPER                : 64
THIS                 : 34 63
TIMES                : 48
VOID                 : 9 26
WHILE                : 32
error                : 

Nonterminals, with rules where they appear

class_body           : 15
class_def            : 3
class_member         : 17 22
class_member_def     : 19
class_member_list    : 16
class_next_member    : 19
empty                : 4 14 18 23 36 69
expr                 : 30 31 32 33 34 35 37 41 45 46 46 47 47 48 48 49 49 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 60 62 63 64 67
expr_list            : 65 68
func_body            : 6
func_def             : 2 21
func_header          : 6
func_param           : 10 13
func_param_def       : 11
multiple_var_def     : 38 40
next_expr            : 67
next_param           : 11
param_list           : 7
program              : 1 2 3
start                : 0
statement            : 8 28 29 30 31 32 32 33 33 33 34 35
var_assignment       : 29
var_def              : 20 28
var_type             : 7 12 38

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . program
    (2) program -> . func_def program
    (3) program -> . class_def program
    (4) program -> . empty
    (6) func_def -> . func_header func_body
    (15) class_def -> . CLASS ID COLON ID class_body
    (5) empty -> .
    (7) func_header -> . var_type ID LPAREN param_list RPAREN
    (24) var_type -> . INT
    (25) var_type -> . STRING
    (26) var_type -> . VOID
    (27) var_type -> . ID

    CLASS           shift and go to state 7
    $end            reduce using rule 5 (empty -> .)
    INT             shift and go to state 10
    STRING          shift and go to state 11
    VOID            shift and go to state 12
    ID              shift and go to state 8

    start                          shift and go to state 1
    program                        shift and go to state 2
    func_def                       shift and go to state 3
    class_def                      shift and go to state 4
    empty                          shift and go to state 5
    func_header                    shift and go to state 6
    var_type                       shift and go to state 9

state 1

    (0) S' -> start .



state 2

    (1) start -> program .

    $end            reduce using rule 1 (start -> program .)


state 3

    (2) program -> func_def . program
    (2) program -> . func_def program
    (3) program -> . class_def program
    (4) program -> . empty
    (6) func_def -> . func_header func_body
    (15) class_def -> . CLASS ID COLON ID class_body
    (5) empty -> .
    (7) func_header -> . var_type ID LPAREN param_list RPAREN
    (24) var_type -> . INT
    (25) var_type -> . STRING
    (26) var_type -> . VOID
    (27) var_type -> . ID

    CLASS           shift and go to state 7
    $end            reduce using rule 5 (empty -> .)
    INT             shift and go to state 10
    STRING          shift and go to state 11
    VOID            shift and go to state 12
    ID              shift and go to state 8

    func_def                       shift and go to state 3
    program                        shift and go to state 13
    class_def                      shift and go to state 4
    empty                          shift and go to state 5
    func_header                    shift and go to state 6
    var_type                       shift and go to state 9

state 4

    (3) program -> class_def . program
    (2) program -> . func_def program
    (3) program -> . class_def program
    (4) program -> . empty
    (6) func_def -> . func_header func_body
    (15) class_def -> . CLASS ID COLON ID class_body
    (5) empty -> .
    (7) func_header -> . var_type ID LPAREN param_list RPAREN
    (24) var_type -> . INT
    (25) var_type -> . STRING
    (26) var_type -> . VOID
    (27) var_type -> . ID

    CLASS           shift and go to state 7
    $end            reduce using rule 5 (empty -> .)
    INT             shift and go to state 10
    STRING          shift and go to state 11
    VOID            shift and go to state 12
    ID              shift and go to state 8

    class_def                      shift and go to state 4
    program                        shift and go to state 14
    func_def                       shift and go to state 3
    empty                          shift and go to state 5
    func_header                    shift and go to state 6
    var_type                       shift and go to state 9

state 5

    (4) program -> empty .

    $end            reduce using rule 4 (program -> empty .)


state 6

    (6) func_def -> func_header . func_body
    (8) func_body -> . LBRACE statement RBRACE

    LBRACE          shift and go to state 16

    func_body                      shift and go to state 15

state 7

    (15) class_def -> CLASS . ID COLON ID class_body

    ID              shift and go to state 17


state 8

    (27) var_type -> ID .

    ID              reduce using rule 27 (var_type -> ID .)


state 9

    (7) func_header -> var_type . ID LPAREN param_list RPAREN

    ID              shift and go to state 18


state 10

    (24) var_type -> INT .

    ID              reduce using rule 24 (var_type -> INT .)


state 11

    (25) var_type -> STRING .

    ID              reduce using rule 25 (var_type -> STRING .)


state 12

    (26) var_type -> VOID .

    ID              reduce using rule 26 (var_type -> VOID .)


state 13

    (2) program -> func_def program .

    $end            reduce using rule 2 (program -> func_def program .)


state 14

    (3) program -> class_def program .

    $end            reduce using rule 3 (program -> class_def program .)


state 15

    (6) func_def -> func_header func_body .

    CLASS           reduce using rule 6 (func_def -> func_header func_body .)
    INT             reduce using rule 6 (func_def -> func_header func_body .)
    STRING          reduce using rule 6 (func_def -> func_header func_body .)
    VOID            reduce using rule 6 (func_def -> func_header func_body .)
    ID              reduce using rule 6 (func_def -> func_header func_body .)
    $end            reduce using rule 6 (func_def -> func_header func_body .)
    RBRACE          reduce using rule 6 (func_def -> func_header func_body .)


state 16

    (8) func_body -> LBRACE . statement RBRACE
    (28) statement -> . var_def statement
    (29) statement -> . var_assignment statement
    (30) statement -> . expr SEMI statement
    (31) statement -> . RETURN expr SEMI statement
    (32) statement -> . WHILE LPAREN expr RPAREN LBRACE statement RBRACE statement
    (33) statement -> . IF LPAREN expr RPAREN LBRACE statement RBRACE ELSE LBRACE statement RBRACE statement
    (34) statement -> . THIS PERIOD ID EQUALS expr SEMI statement
    (35) statement -> . ID PERIOD ID EQUALS expr SEMI statement
    (36) statement -> . empty
    (38) var_def -> . var_type ID multiple_var_def
    (37) var_assignment -> . ID EQUALS expr SEMI
    (41) expr -> . LPAREN expr RPAREN
    (42) expr -> . ID
    (43) expr -> . INT_CONST
    (44) expr -> . STRING_CONST
    (45) expr -> . MINUS expr
    (46) expr -> . expr PLUS expr
    (47) expr -> . expr MINUS expr
    (48) expr -> . expr TIMES expr
    (49) expr -> . expr DIVIDE expr
    (50) expr -> . LNOT expr
    (51) expr -> . expr LOR expr
    (52) expr -> . expr LAND expr
    (53) expr -> . expr LT expr
    (54) expr -> . expr LE expr
    (55) expr -> . expr GE expr
    (56) expr -> . expr GT expr
    (57) expr -> . expr EQ expr
    (58) expr -> . expr NE expr
    (59) expr -> . LPAREN INT RPAREN expr
    (60) expr -> . LPAREN STRING RPAREN expr
    (61) expr -> . NEW ID
    (62) expr -> . ID PERIOD expr
    (63) expr -> . THIS PERIOD expr
    (64) expr -> . SUPER PERIOD expr
    (65) expr -> . ID LPAREN expr_list RPAREN
    (66) expr -> . ID LPAREN RPAREN
    (5) empty -> .
    (24) var_type -> . INT
    (25) var_type -> . STRING
    (26) var_type -> . VOID
    (27) var_type -> . ID

    RETURN          shift and go to state 23
    WHILE           shift and go to state 24
    IF              shift and go to state 26
    THIS            shift and go to state 27
    ID              shift and go to state 28
    LPAREN          shift and go to state 25
    INT_CONST       shift and go to state 31
    STRING_CONST    shift and go to state 32
    MINUS           shift and go to state 33
    LNOT            shift and go to state 34
    NEW             shift and go to state 35
    SUPER           shift and go to state 36
    RBRACE          reduce using rule 5 (empty -> .)
    INT             shift and go to state 10
    STRING          shift and go to state 11
    VOID            shift and go to state 12

    statement                      shift and go to state 19
    var_def                        shift and go to state 20
    var_assignment                 shift and go to state 21
    expr                           shift and go to state 22
    empty                          shift and go to state 29
    var_type                       shift and go to state 30

state 17

    (15) class_def -> CLASS ID . COLON ID class_body

    COLON           shift and go to state 37


state 18

    (7) func_header -> var_type ID . LPAREN param_list RPAREN

    LPAREN          shift and go to state 38


state 19

    (8) func_body -> LBRACE statement . RBRACE

    RBRACE          shift and go to state 39


state 20

    (28) statement -> var_def . statement
    (28) statement -> . var_def statement
    (29) statement -> . var_assignment statement
    (30) statement -> . expr SEMI statement
    (31) statement -> . RETURN expr SEMI statement
    (32) statement -> . WHILE LPAREN expr RPAREN LBRACE statement RBRACE statement
    (33) statement -> . IF LPAREN expr RPAREN LBRACE statement RBRACE ELSE LBRACE statement RBRACE statement
    (34) statement -> . THIS PERIOD ID EQUALS expr SEMI statement
    (35) statement -> . ID PERIOD ID EQUALS expr SEMI statement
    (36) statement -> . empty
    (38) var_def -> . var_type ID multiple_var_def
    (37) var_assignment -> . ID EQUALS expr SEMI
    (41) expr -> . LPAREN expr RPAREN
    (42) expr -> . ID
    (43) expr -> . INT_CONST
    (44) expr -> . STRING_CONST
    (45) expr -> . MINUS expr
    (46) expr -> . expr PLUS expr
    (47) expr -> . expr MINUS expr
    (48) expr -> . expr TIMES expr
    (49) expr -> . expr DIVIDE expr
    (50) expr -> . LNOT expr
    (51) expr -> . expr LOR expr
    (52) expr -> . expr LAND expr
    (53) expr -> . expr LT expr
    (54) expr -> . expr LE expr
    (55) expr -> . expr GE expr
    (56) expr -> . expr GT expr
    (57) expr -> . expr EQ expr
    (58) expr -> . expr NE expr
    (59) expr -> . LPAREN INT RPAREN expr
    (60) expr -> . LPAREN STRING RPAREN expr
    (61) expr -> . NEW ID
    (62) expr -> . ID PERIOD expr
    (63) expr -> . THIS PERIOD expr
    (64) expr -> . SUPER PERIOD expr
    (65) expr -> . ID LPAREN expr_list RPAREN
    (66) expr -> . ID LPAREN RPAREN
    (5) empty -> .
    (24) var_type -> . INT
    (25) var_type -> . STRING
    (26) var_type -> . VOID
    (27) var_type -> . ID

    RETURN          shift and go to state 23
    WHILE           shift and go to state 24
    IF              shift and go to state 26
    THIS            shift and go to state 27
    ID              shift and go to state 28
    LPAREN          shift and go to state 25
    INT_CONST       shift and go to state 31
    STRING_CONST    shift and go to state 32
    MINUS           shift and go to state 33
    LNOT            shift and go to state 34
    NEW             shift and go to state 35
    SUPER           shift and go to state 36
    RBRACE          reduce using rule 5 (empty -> .)
    INT             shift and go to state 10
    STRING          shift and go to state 11
    VOID            shift and go to state 12

    var_def                        shift and go to state 20
    statement                      shift and go to state 40
    var_assignment                 shift and go to state 21
    expr                           shift and go to state 22
    empty                          shift and go to state 29
    var_type                       shift and go to state 30

state 21

    (29) statement -> var_assignment . statement
    (28) statement -> . var_def statement
    (29) statement -> . var_assignment statement
    (30) statement -> . expr SEMI statement
    (31) statement -> . RETURN expr SEMI statement
    (32) statement -> . WHILE LPAREN expr RPAREN LBRACE statement RBRACE statement
    (33) statement -> . IF LPAREN expr RPAREN LBRACE statement RBRACE ELSE LBRACE statement RBRACE statement
    (34) statement -> . THIS PERIOD ID EQUALS expr SEMI statement
    (35) statement -> . ID PERIOD ID EQUALS expr SEMI statement
    (36) statement -> . empty
    (38) var_def -> . var_type ID multiple_var_def
    (37) var_assignment -> . ID EQUALS expr SEMI
    (41) expr -> . LPAREN expr RPAREN
    (42) expr -> . ID
    (43) expr -> . INT_CONST
    (44) expr -> . STRING_CONST
    (45) expr -> . MINUS expr
    (46) expr -> . expr PLUS expr
    (47) expr -> . expr MINUS expr
    (48) expr -> . expr TIMES expr
    (49) expr -> . expr DIVIDE expr
    (50) expr -> . LNOT expr
    (51) expr -> . expr LOR expr
    (52) expr -> . expr LAND expr
    (53) expr -> . expr LT expr
    (54) expr -> . expr LE expr
    (55) expr -> . expr GE expr
    (56) expr -> . expr GT expr
    (57) expr -> . expr EQ expr
    (58) expr -> . expr NE expr
    (59) expr -> . LPAREN INT RPAREN expr
    (60) expr -> . LPAREN STRING RPAREN expr
    (61) expr -> . NEW ID
    (62) expr -> . ID PERIOD expr
    (63) expr -> . THIS PERIOD expr
    (64) expr -> . SUPER PERIOD expr
    (65) expr -> . ID LPAREN expr_list RPAREN
    (66) expr -> . ID LPAREN RPAREN
    (5) empty -> .
    (24) var_type -> . INT
    (25) var_type -> . STRING
    (26) var_type -> . VOID
    (27) var_type -> . ID

    RETURN          shift and go to state 23
    WHILE           shift and go to state 24
    IF              shift and go to state 26
    THIS            shift and go to state 27
    ID              shift and go to state 28
    LPAREN          shift and go to state 25
    INT_CONST       shift and go to state 31
    STRING_CONST    shift and go to state 32
    MINUS           shift and go to state 33
    LNOT            shift and go to state 34
    NEW             shift and go to state 35
    SUPER           shift and go to state 36
    RBRACE          reduce using rule 5 (empty -> .)
    INT             shift and go to state 10
    STRING          shift and go to state 11
    VOID            shift and go to state 12

    var_assignment                 shift and go to state 21
    statement                      shift and go to state 41
    var_def                        shift and go to state 20
    expr                           shift and go to state 22
    empty                          shift and go to state 29
    var_type                       shift and go to state 30

state 22

    (30) statement -> expr . SEMI statement
    (46) expr -> expr . PLUS expr
    (47) expr -> expr . MINUS expr
    (48) expr -> expr . TIMES expr
    (49) expr -> expr . DIVIDE expr
    (51) expr -> expr . LOR expr
    (52) expr -> expr . LAND expr
    (53) expr -> expr . LT expr
    (54) expr -> expr . LE expr
    (55) expr -> expr . GE expr
    (56) expr -> expr . GT expr
    (57) expr -> expr . EQ expr
    (58) expr -> expr . NE expr

    SEMI            shift and go to state 42
    PLUS            shift and go to state 43
    MINUS           shift and go to state 44
    TIMES           shift and go to state 45
    DIVIDE          shift and go to state 46
    LOR             shift and go to state 47
    LAND            shift and go to state 48
    LT              shift and go to state 49
    LE              shift and go to state 50
    GE              shift and go to state 51
    GT              shift and go to state 52
    EQ              shift and go to state 53
    NE              shift and go to state 54


state 23

    (31) statement -> RETURN . expr SEMI statement
    (41) expr -> . LPAREN expr RPAREN
    (42) expr -> . ID
    (43) expr -> . INT_CONST
    (44) expr -> . STRING_CONST
    (45) expr -> . MINUS expr
    (46) expr -> . expr PLUS expr
    (47) expr -> . expr MINUS expr
    (48) expr -> . expr TIMES expr
    (49) expr -> . expr DIVIDE expr
    (50) expr -> . LNOT expr
    (51) expr -> . expr LOR expr
    (52) expr -> . expr LAND expr
    (53) expr -> . expr LT expr
    (54) expr -> . expr LE expr
    (55) expr -> . expr GE expr
    (56) expr -> . expr GT expr
    (57) expr -> . expr EQ expr
    (58) expr -> . expr NE expr
    (59) expr -> . LPAREN INT RPAREN expr
    (60) expr -> . LPAREN STRING RPAREN expr
    (61) expr -> . NEW ID
    (62) expr -> . ID PERIOD expr
    (63) expr -> . THIS PERIOD expr
    (64) expr -> . SUPER PERIOD expr
    (65) expr -> . ID LPAREN expr_list RPAREN
    (66) expr -> . ID LPAREN RPAREN

    LPAREN          shift and go to state 25
    ID              shift and go to state 56
    INT_CONST       shift and go to state 31
    STRING_CONST    shift and go to state 32
    MINUS           shift and go to state 33
    LNOT            shift and go to state 34
    NEW             shift and go to state 35
    THIS            shift and go to state 57
    SUPER           shift and go to state 36

    expr                           shift and go to state 55

state 24

    (32) statement -> WHILE . LPAREN expr RPAREN LBRACE statement RBRACE statement

    LPAREN          shift and go to state 58


state 25

    (41) expr -> LPAREN . expr RPAREN
    (59) expr -> LPAREN . INT RPAREN expr
    (60) expr -> LPAREN . STRING RPAREN expr
    (41) expr -> . LPAREN expr RPAREN
    (42) expr -> . ID
    (43) expr -> . INT_CONST
    (44) expr -> . STRING_CONST
    (45) expr -> . MINUS expr
    (46) expr -> . expr PLUS expr
    (47) expr -> . expr MINUS expr
    (48) expr -> . expr TIMES expr
    (49) expr -> . expr DIVIDE expr
    (50) expr -> . LNOT expr
    (51) expr -> . expr LOR expr
    (52) expr -> . expr LAND expr
    (53) expr -> . expr LT expr
    (54) expr -> . expr LE expr
    (55) expr -> . expr GE expr
    (56) expr -> . expr GT expr
    (57) expr -> . expr EQ expr
    (58) expr -> . expr NE expr
    (59) expr -> . LPAREN INT RPAREN expr
    (60) expr -> . LPAREN STRING RPAREN expr
    (61) expr -> . NEW ID
    (62) expr -> . ID PERIOD expr
    (63) expr -> . THIS PERIOD expr
    (64) expr -> . SUPER PERIOD expr
    (65) expr -> . ID LPAREN expr_list RPAREN
    (66) expr -> . ID LPAREN RPAREN

    INT             shift and go to state 60
    STRING          shift and go to state 61
    LPAREN          shift and go to state 25
    ID              shift and go to state 56
    INT_CONST       shift and go to state 31
    STRING_CONST    shift and go to state 32
    MINUS           shift and go to state 33
    LNOT            shift and go to state 34
    NEW             shift and go to state 35
    THIS            shift and go to state 57
    SUPER           shift and go to state 36

    expr                           shift and go to state 59

state 26

    (33) statement -> IF . LPAREN expr RPAREN LBRACE statement RBRACE ELSE LBRACE statement RBRACE statement

    LPAREN          shift and go to state 62


state 27

    (34) statement -> THIS . PERIOD ID EQUALS expr SEMI statement
    (63) expr -> THIS . PERIOD expr

    PERIOD          shift and go to state 63


state 28

    (35) statement -> ID . PERIOD ID EQUALS expr SEMI statement
    (37) var_assignment -> ID . EQUALS expr SEMI
    (42) expr -> ID .
    (62) expr -> ID . PERIOD expr
    (65) expr -> ID . LPAREN expr_list RPAREN
    (66) expr -> ID . LPAREN RPAREN
    (27) var_type -> ID .

    PERIOD          shift and go to state 64
    EQUALS          shift and go to state 65
    SEMI            reduce using rule 42 (expr -> ID .)
    PLUS            reduce using rule 42 (expr -> ID .)
    MINUS           reduce using rule 42 (expr -> ID .)
    TIMES           reduce using rule 42 (expr -> ID .)
    DIVIDE          reduce using rule 42 (expr -> ID .)
    LOR             reduce using rule 42 (expr -> ID .)
    LAND            reduce using rule 42 (expr -> ID .)
    LT              reduce using rule 42 (expr -> ID .)
    LE              reduce using rule 42 (expr -> ID .)
    GE              reduce using rule 42 (expr -> ID .)
    GT              reduce using rule 42 (expr -> ID .)
    EQ              reduce using rule 42 (expr -> ID .)
    NE              reduce using rule 42 (expr -> ID .)
    LPAREN          shift and go to state 66
    ID              reduce using rule 27 (var_type -> ID .)


state 29

    (36) statement -> empty .

    RBRACE          reduce using rule 36 (statement -> empty .)


state 30

    (38) var_def -> var_type . ID multiple_var_def

    ID              shift and go to state 67


state 31

    (43) expr -> INT_CONST .
